# onset

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PKGBUILD  README.md  build.rs  install_arch
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: aur-git.yml  aur-release.yml  ci.yml  release.yml
aur/onset/: PKGBUILD
aur/onset-git/: PKGBUILD
data/: com.github.xPathin.onset.desktop
src/: app.rs  config.rs  main.rs  utils.rs
src/desktop_entry/: mod.rs  parser.rs  types.rs  writer.rs
src/discovery/: applications.rs  autostart.rs  mod.rs
src/model/: app_entry.rs  autostart_entry.rs  mod.rs
src/operations/: create.rs  delay.rs  edit.rs  mod.rs  toggle.rs
src/ui/: app_chooser.rs  autostart_row.rs  entry_dialog.rs  mod.rs  window.rs
