[package]
name = "onset"
version = "0.1.1"
edition = "2024"
authors = ["Patrick Fischer"]
description = "Lightweight XDG autostart manager"
license = "MIT"
repository = "https://github.com/xPathin/onset"
keywords = ["autostart", "xdg", "gtk", "linux", "desktop"]
categories = ["gui", "config"]

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_4"] }
xdg = "3.0"
anyhow = "1.0.100"
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
regex = "1.12"
once_cell = "1.21"
freedesktop-icons = "0.4"

[profile.release]
lto = true
strip = true
codegen-units = 1
